--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Lee's Info</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lee's Info</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="jquery.js"></script>
+
 <style>
 body {
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -17,6 +20,11 @@ body {
 }
 .header h1 {
     font-size: 40px;
+}
+h2 {
+    padding: 50px
+    text-align: center;
+    color: black;
 }
 
 .navbar {
@@ -31,14 +39,13 @@ body {
     padding: 14px 20px;
     text-decoration: none;
 }
-.navbar a.right {
-    float: right;
-}
 .navbar a:hover {
     background-color: #ddd;
     color: black;
 }
-
+.navbar a.right {
+    float: right;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -54,51 +61,306 @@ body {
     padding: 20px;
 }
 
+th {
+    border: 3px solid #ffffff;
+    text-align: center;
+    padding: 10px;
+}
+
+td {
+    border: 1px solid #ffffff;
+    text-align: left;
+    padding: 7px;
+}
+
 .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     padding: 20px;
     text-align: center;
     background: #ddd;
+}
+
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+#page2 {
+  display: none;
+}
+
+#page3 {
+  display: none;
+}
+
+#page4 {
+  display: none;
+}
+
+#page5 {
+  display: none;
+}
+
+#page6 {
+  display: none;
 }
 
 </style>
 </head>
 <body>
 
-<div class="header">
-<img src="Lee.JPG" alt="Lee" style="float:right;width:100px;height:100px">
+<div id="anidiv" class="header">
+<img id="img" src="Lee.JPG" alt="Lee" style="float:right;width:100px;height:80px" class="rotate90">
 <h1>Lee's Information</h1>
 <p>Find out more about me.</p>
 </div>
 
 <div class="navbar">
-  <a href="CMPS260/CMPS260.html">CMPS 260</a>
-  <a href="#" class="right">CMPS 262</a>
+  <a href="javascript:void(0)" onclick="showPage(1)">Home</a>
+  <a href="javascript:void(0)" onclick="showPage(2)">CMPS 260</a>
+  <a href="javascript:void(0)" onclick="showPage(3)">Interests</a>
+  <a href="javascript:void(0)" onclick="showPage(4)">Current Courses</a>
+  <a href="javascript:void(0)" onclick="showPage(5)">Course Schedule</a>
+  <a href="javascript:void(0)" onclick="showPage(6)">About Me</a>
+  <a onclick="hideShow()" class="right">Toggle Header</a>
 </div>
 
-<div class="row">
-  <div class="side">
-    <p>SOME INTERESTS<br />
-      <br />
-      Video Games<br />
-      Music<br />
-      Anime<br />
-      Mapping (for Zelda)<br />
-      Movies<br />
-      Programming</p>
+
+<div id="page1">
+  <p>Click one of the buttons above to be taken to a different page about me.</p>
+</div>
+
+<div id="page2">
+  <h2>Assignments for CMPS 260 Data Structures.</h2>
+  <table style="width:100%">
+    <tr>
+      <th>Week 1</th>
+      <th>Week 2</th>
+      <th>Week 3</th>
+      <th>Week 4</th>
+      <th>Week 5</th>
+      <th>Week 6</th>
+      <th>Week 7</th>
+    </tr>
+    <tr>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-01-class.html">Class</a></li>
+          <li><a href="CMPS260/module-01-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-01-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-01-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-02-class.html">Class</a></li>
+          <li><a href="CMPS260/module-02-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-02-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-02-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-03-class.html">Class</a></li>
+          <li><a href="CMPS260/module-03-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-03-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-03-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-04-class.html">Class</a></li>
+          <li><a href="CMPS260/module-04-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-04-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-04-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-05-class.html">Class</a></li>
+          <li><a href="CMPS260/module-05-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-05-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-05-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-06-class.html">Class</a></li>
+          <li><a href="CMPS260/module-06-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-06-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-06-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-07-class.html">Class</a></li>
+          <li><a href="CMPS260/module-07-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-07-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-07-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <th>Week 8</th>
+      <th>Week 9</th>
+      <th>Week 10</th>
+      <th>Week 11</th>
+      <th>Week 12</th>
+      <th>Week 13</th>
+      <th>Week 14</th>
+    </tr>
+    <tr>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-08-class.html">Class</a></li>
+          <li><a href="CMPS260/module-08-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-08-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-08-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-09-class.html">Class</a></li>
+          <li><a href="CMPS260/module-09-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-09-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-09-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-10-class.html">Class</a></li>
+          <li><a href="CMPS260/module-10-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-10-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-10-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-11-class.html">Class</a></li>
+          <li><a href="CMPS260/module-11-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-11-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-11-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-12-class.html">Class</a></li>
+          <li><a href="CMPS260/module-12-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-12-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-12-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-13-class.html">Class</a></li>
+          <li><a href="CMPS260/module-13-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-13-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-13-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li><a href="CMPS260/module-14-class.html">Class</a></li>
+          <li><a href="CMPS260/module-14-class-solutions.html">Class Solutions</a></li>
+          <li><a href="CMPS260/module-14-homework.html">Homework</a></li>
+          <li><a href="CMPS260/module-14-homework-solutions.html">Homework Solutions</a></li>
+        </ul>
+      </td>
+    </tr>
+  </table>
+</div>
+
+<div id="page3">
+  <div class="row">
+    <div class="side">
+      <h2>Some Interests</h2>
+      <p>
+        Video Games - Mostly Zelda, Mario, and Smash Bros.<br />
+        Music - Pretty much only game music and music from anime.<br />
+        Anime - Don't even ask for my favorite; because I don't even know.<br />
+        Mapping (for Zelda) - Using modeling programs to make maps for Ocarina of Time and porting them into the game.<br />
+        Movies - Usually animated movies, but anything with Ben Stiller or Robbie Williams in them (to name some) are great.<br />
+        Programming - Utilizing this skill in the future to make my own games and websites.
+      </p>
+    </div>
   </div>
-  <div class="main">About Me</div>
-  <p>I am Lee Jordan, a student at Point Park University under the major of Information Technology. To my knowledge, I have lived in Pittsburgh my whole life,
-  <br />  and I went to the Shaler Area School District. I graduated in 2014, and am due to graduate Point Park in 2019.</p>
-  <div class="side">
-    <p>CURRENT COURSES<br />
-    <br /></p>
-    <ul>
-      <li>BMGT 300 - Corporate Finance</li>
-      <li>BMGT 208 - Princeiples of Management</li>
-      <li>BMGT 221 - Business Communication and Research</li>
-      <li>CMPS 260 - Data Structures</li>
-      <li>CMPS 262 - Advanced Programming</li>
-    </ul>
+</div>
+
+<div id="page4">
+  <div class="row">
+    <div class="side">
+      <h2>Current Courses</h2>
+      <ul>
+        <li>BMGT 300 - Corporate Finance</li>
+        <li>BMGT 208 - Princeiples of Management</li>
+        <li>BMGT 221 - Business Communication and Research</li>
+        <li>CMPS 260 - Data Structures</li>
+        <li>CMPS 262 - Advanced Programming</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div id="page5">
+  <h2>Course Schedule</h2>
+  <table style="width:100%">
+    <tr>
+      <th>Course Code</th>
+      <th>Course Name</th>
+      <th>Instructor</th>
+      <th>Room Number</th>
+      <th>Time</th>
+    </tr>
+    <tr>
+      <td>BMGT 208</td>
+      <td>Principles of Management</td>
+      <td>Soren Hogsgaard</td>
+      <td>WP 601</td>
+      <td>11:20 - 12:50, T R</td>
+    </tr>
+    <tr>
+      <td>BMGT 221</td>
+      <td>Business Communication and Research</td>
+      <td>Elaine Luther</td>
+      <td>WP 313</td>
+      <td>2:40 - 4:10, T R</td>
+    </tr>
+    <tr>
+      <td>BMGT 300</td>
+      <td>Corporate Finance</td>
+      <td>Joseph DeFazio</td>
+      <td>WP 305</td>
+      <td>9:40 - 11:10, T R</td>
+    </tr>
+    <tr>
+      <td>CMPS 260</td>
+      <td>Data Structures</td>
+      <td>Mark Voortman</td>
+      <td>WP 801</td>
+      <td>6:00 - 9:00, T</td>
+    </tr>
+    <tr>
+      <td>CMPS 262</td>
+      <td>Advanced Programming</td>
+      <td>Mark Voortman</td>
+      <td>Mark's Office</td>
+      <td>By Appointment</td>
+    </tr>
+  </table>
+</div>
+
+<div id="page6">
+  <div class="main">
+    <h2>About Me</h2>
+    <p>
+      I am Lee Jordan, a student at Point Park University under the major of Information Technology. To my knowledge, I have lived in Pittsburgh my whole life, and I went to the Shaler Area School District. I graduated in 2014, and am due to graduate Point Park in 2019.
+    </p>
   </div>
 </div>
 
@@ -110,4 +372,43 @@ body {
 </div>
 
 </body>
+<script>
+$(document).ready(function() {
+});
+function hideShow() {
+  var toggle = document.getElementById("anidiv");
+  if (toggle.style.display === "none") {
+      toggle.style.display = "block";
+  } else {
+      toggle.style.display = "none";
+  }
+}
+function showPage(page) {
+  $("#page1").css("display", "none");
+  $("#page2").css("display", "none");
+  $("#page3").css("display", "none");
+  $("#page4").css("display", "none");
+  $("#page5").css("display", "none");
+  $("#page6").css("display", "none");
+
+  if (page === 1) {
+    $("#page1").css("display", "block");
+  }
+  else if (page === 2) {
+    $("#page2").css("display", "block");
+  }
+  else if (page === 3) {
+    $("#page3").css("display", "block");
+  }
+  else if (page === 4) {
+    $("#page4").css("display", "block");
+  }
+  else if (page === 5) {
+    $("#page5").css("display", "block");
+  }
+  else if (page === 6) {
+    $("#page6").css("display", "block");
+  }
+}
+</script>
 </html>
